force-app/main/default/objects/pymtTest__Payment_Method__c/pymtTest__Payment_Method__c.object-meta.xml
<CustomObject>
    <description>Stores tokenized payment methods (credit cards, bank accounts) for accounts</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Payment Method ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>