force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Account__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account this payment method belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>