force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Active__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this payment method is active and can be used</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>