force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Gateway_Token__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Gateway_Token__c</fullName>
    <description>Token from the payment gateway representing this payment method</description>
    <externalId>true</externalId>
    <label>Gateway Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>