force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Is_Expired__c</fullName>
    <description>Indicates if the payment method has expired based on expiration month and year</description>
    <formula>IF(
    ISBLANK(pymtTest__Expiration_Year__c) || ISBLANK(pymtTest__Expiration_Month__c),
    false,
    OR(
        pymtTest__Expiration_Year__c &lt; YEAR(TODAY()),
        AND(
            pymtTest__Expiration_Year__c = YEAR(TODAY()),
            pymtTest__Expiration_Month__c &lt; MONTH(TODAY())
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>