force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Last_Four__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Last_Four__c</fullName>
    <description>Last four digits of the card number</description>
    <label>Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>