force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment gateway this token is associated with</description>
    <label>Payment Gateway</label>
    <referenceTo>pymtTest__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>