force-app/main/default/objects/pymtTest__Payment_Method__c/fields/pymtTest__Type__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Type__c</fullName>
    <description>Type of payment method</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>